# SPICE-VULCAN

./: .gitignore  README.md  environment.yml  pyproject.toml  submit_hessian_local.ps1
data/: README.md
review_vulcan_mc_notebook/: prepare_review_data.py  vulcan_mc_review.ipynb
review_vulcan_mc_send/: README.md  vulcan_mc_review.ipynb
scripts/: 01_coil_correction.py  02_B0_map_estimation.py  03_lipid_removal.py  04_run_spice.py  04d_SPICE_lam20_refit.py  05_adjoint_recon.py  06_iterative_nufft_recon.py  07_spectral_fitting.py  08_Laplacian_Covariance.py  08b_Laplacian_Covariance_joint.py  09_prefitting_uncertainty_laplacian.py  10_prefitting_uncertainty_lobpcg.py  11_analytical_conc_uncertainty.py  12_MC_conc_uncertainty.py  13_pair_conc_correlation.py  14_group_uncertainty.py  data_proc_01_twix2npy.py
scripts/data_preproc/: data_proc_01_twix2npy.py  data_proc_02_coil_correction.py  data_proc_03_B0_map_estimation.py  data_proc_04_lipid_removal.py  data_proc_05_combine_mrsi.py  data_proc_06_undersample.py
scripts/recon_method/: recon_01_run_spice.py  recon_02_adjoint_recon.py  recon_03_iterative_nufft_recon.py  recon_04_adjoint_us.py
scripts/specfitting/: specfit_01_fsl_mrsi_fit.py
scripts/uncertainty/MC/: Uncert_05_MC_conc_uncertainty.py  Uncert_06_pair_conc_correlation.py  Uncert_07_group_uncertainty.py  Uncert_08_MC_adjoint_us.py  Uncert_09_compare_mc_analyt.py  Uncert_10_compare_mc_lobpcg.py
scripts/uncertainty/analytical/: Uncert_01_Laplacian_Covariance.py  Uncert_02_prefitting_uncertainty_laplacian.py  Uncert_03_prefitting_uncertainty_lobpcg.py  Uncert_03b_plot_lobpcg.py  Uncert_04_analytical_conc_uncertainty.py  Uncert_11_check_nufft_gram_scale.py  Uncert_13_check_cg_tol_mhm.py  (+5 more)
utils/: pipeline_utils.py  recon.py  scan_params.py
