[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "spice-margarita"
version = "0.1.0"
description = "SPICE-MARGARITA: 2D MRSI reconstruction and metabolite uncertainty quantification"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "scipy>=1.17.1",
    "matplotlib>=3.10.8",
    "torch>=2.10.0",
    "torchkbnufft==1.4.0",
    "finufft>=2.4.1",
    "mri-nufft>=1.4.0",
    # fsl-mrs and fsleyes must be installed via conda (see environment.yml):
    #   conda install -c conda-forge
    #                 -c https://fsl.fmrib.ox.ac.uk/fsldownloads/fslconda/public/
    #                 fsl_mrs fsleyes
    # fsleyes-plugin-mrs: pip install git+https://git.fmrib.ox.ac.uk/wclarke/fsleyes-plugin-mrs
    "nifti-mrs>=1.4.1",
    "networkx>=3.6.1",
    "nibabel>=5.4.2",
    "scikit-learn>=1.8.0",
    "psutil>=7.2.2",
    "tqdm>=4.67.3",
]

[tool.setuptools.packages.find]
include = ["utils*"]
